--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
                 </div>
               </nav>
         </section>
+        <section class="ls-max-width mx-auto pt-3 pt-lg-5">
+            <div class="hero vh-100 mx-2 mx-lg-5 d-flex flex-column align-items-center justify-content-center text-center rounded-2">
+                <div class="ls-max-width-2">
+                    <h1 class="text-white fw-bold ls-ff-eb display-1 pb-4">We Provide Effective Legal Solutions</h1>
+                    <p class="ls-ff-poppins text-white fw-light pb-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                   <div>
+                      <input class="rounded py-2 px-3 border-0 w-50" type="text" placeholder="search your service">
+                      <input class="ls-btn-primary border-0 w-25" type="submit" value="Search">
+                   </div>
+                </div>
+            </div>
+        </section>
     </header>
     
 
