practice area done

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                          </div>
                          <div class="modal-footer">
                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                           <button type="button" class="btn btn-primary">Understood</button>
+                           <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Understood</button>
                          </div>
                        </div>
                       </div>
@@ -85,6 +85,82 @@
             </div>
         </section>
     </header>
+
+
+    <main class="container-fluid">
+        <!-- legalPracticeArea -->
+        <section class="ls-max-width mx-auto ls-section-mt">
+            <div class="mx-2 mx-lg-5">
+                <div class="text-center ls-max-width-2 mx-auto pb-5">
+                    <h1 class="ls-text-primary display-5 ls-text-primary pb-3 fw-bold ls-ff-eb">The Legal Practice Area</h1>
+                    <p class="fw-light ls-text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4 px-4 py-5 text-center ls-border ls-hover">
+                        <div>
+                            <img class="img-fluid pb-4" src="./images/Group 10.png" alt="">
+                            <h2 class="fw-bold fs-2 .ls-text-primary ls-ff-eb pb-2">Business Law</h2>
+                            <p class="ls-text-secondary ls-ff-poppins pb-3">In civil-law countries, company law consists of statute law; in common-law countries it consists partly of the ordinary rules.</p>
+                            <a href=""><img src="./images/Frame.png" alt=""></a>
+                        </div>
+
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 px-4 py-5 text-center ls-border ls-hover">
+                        <div>
+                            <img class="img-fluid pb-4" src="./images/Group 15.png" alt="">
+                            <h2 class="fw-bold fs-2 .ls-text-primary ls-ff-eb pb-2">Criminal Law</h2>
+                            <p class="ls-text-secondary ls-ff-poppins pb-3">In civil-law countries, company law consists of statute law; in common-law countries it consists partly of the ordinary rules.</p>
+                            <a href=""><img src="./images/Frame.png" alt=""></a>
+                        </div>
+
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 px-4 py-5 text-center ls-border ls-hover">
+                        <div>
+                            <img class="img-fluid pb-4" src="./images/layer1.png" alt="">
+                            <h2 class="fw-bold fs-2 .ls-text-primary ls-ff-eb pb-2">Child Support</h2>
+                            <p class="ls-text-secondary ls-ff-poppins pb-3">In civil-law countries, company law consists of statute law; in common-law countries it consists partly of the ordinary rules.</p>
+                            <a href=""><img src="./images/Frame.png" alt=""></a>
+                        </div>
+
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 px-4 py-5 text-center ls-border ls-hover">
+                        <div>
+                            <img class="img-fluid pb-4" src="./images/Group 12.png" alt="">
+                            <h2 class="fw-bold fs-2 .ls-text-primary ls-ff-eb pb-2">Education Law</h2>
+                            <p class="ls-text-secondary ls-ff-poppins pb-3">In civil-law countries, company law consists of statute law; in common-law countries it consists partly of the ordinary rules.</p>
+                            <a href=""><img src="./images/Frame.png" alt=""></a>
+                        </div>
+
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 px-4 py-5 text-center ls-border ls-hover">
+                        <div>
+                            <img class="img-fluid pb-4" src="./images/Group 16.png" alt="">
+                            <h2 class="fw-bold fs-2 .ls-text-primary ls-ff-eb pb-2">Divorce Law</h2>
+                            <p class="ls-text-secondary ls-ff-poppins pb-3">In civil-law countries, company law consists of statute law; in common-law countries it consists partly of the ordinary rules.</p>
+                            <a href=""><img src="./images/Frame.png" alt=""></a>
+                        </div>
+
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 px-4 py-5 text-center ls-border ls-hover">
+                        <div>
+                            <img class="img-fluid pb-4" src="./images/Group 13.png" alt="">
+                            <h2 class="fw-bold fs-2 .ls-text-primary ls-ff-eb pb-2">Tax Law</h2>
+                            <p class="ls-text-secondary ls-ff-poppins pb-3">In civil-law countries, company law consists of statute law; in common-law countries it consists partly of the ordinary rules.</p>
+                            <a href=""><img src="./images/Frame.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Clients -->
+        <section class="ls-max-width mx-auto ls-section-mt">
+            <div class="mx-2 mx-lg-5">
+                <div class="text-center ls-max-width-2 mx-auto pb-5">
+                    <h1 class="ls-text-primary display-5 ls-text-primary pb-3 fw-bold ls-ff-eb">The Legal Practice Area</h1>
+                    <p class="fw-light ls-text-secondary">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                </div>
+    </main>
     
 
 
